--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,4 +2,7 @@
 
 {% block body %}
 <h1>Home Page</h1>
+<a href="{{ url_for('authPage') }}">Login or Register</a>
+
+<a href="{{ url_for('roomListPage') }}">View Rooms</a>
 {% endblock %}
