added confirm field to register form

--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -18,6 +18,7 @@
     {{ register_form.csrf_token }}
     {{ render_field(register_form.email) }} <br/>
     {{ render_field(register_form.password) }} <br/>
+    {{ render_field(register_form.confirm) }} <br/>
     {{ register_form.register_submit }}
 </form>
 
