--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<h1>Home Page</h1>
-<a href="{{ url_for('auth_page') }}">Login or Register</a>
-
-<a href="{{ url_for('room_list_page') }}">View Rooms</a>
+<div id="home-main-div" class="container-fluid">
+    <a href="{{ url_for('auth_page') }}">Login or Register</a>
+    <a href="{{ url_for('room_list_page') }}">View Rooms</a>
+</div>
 {% endblock %}
