--- a/app/templates/roomList.html
+++ b/app/templates/roomList.html
@@ -14,6 +14,8 @@
     <form method="POST" action="{{ url_for('room_list_page') }}" id="room-search-form">
       <div class="room-search-param-container">
         <div id="calendar">
+            {{ form.check_in_date() }}
+            {{ form.check_out_date() }}
         </div>
       </div>
       <div class="room-search-param-container">
