--- a/app/templates/_formhelpers.html
+++ b/app/templates/_formhelpers.html
@@ -1,12 +1,24 @@
 {% macro render_field(field) %}
-  <dt>{{ field.label }}
-  <dd>{{ field(**kwargs)|safe }}
+<dt>{{ field.label }}
+<dd>{{ field(**kwargs)|safe }}
   {% if field.errors %}
-    <ul class=errors>
+  <ul class=errors>
     {% for error in field.errors %}
-      <li>{{ error }}</li>
+    <li>{{ error }}</li>
     {% endfor %}
-    </ul>
+  </ul>
   {% endif %}
-  </dd>
+</dd>
+{% endmacro %}
+
+{% macro render_error(category) %}
+  {% with errors = get_flashed_messages(category_filter=[category]) %}
+  {% if errors %}
+  <div class="alert-message block-message error">
+    {%- for msg in errors %}
+    <p>{{ msg }}</p>
+    {% endfor -%}
+  </div>
+  {% endif %}
+  {% endwith %}
 {% endmacro %}
