--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -3,7 +3,15 @@
     flex-direction: column;
     justify-content: center;
     height: 100vh;
-    background-color: #CEE7FD;
+    background-image: url(../images/glassbuilding.jpg);
+    background-position: center;
+    background-size: contain;
+}
+
+#hotel-callisto-title {
+    margin: 1em;
+    text-align: center;
+    color: #3b5249;
 }
 
 .calendar-container {
@@ -18,7 +26,6 @@
 
 .room-search-param-container {
     display: flex;
-    display: inline-block;
     height: 100%;
 }
 
@@ -34,6 +41,7 @@
 .room-search-params {
     display: flex;
     margin: 0.5em 0em 0.5em 0.5em;
+    padding: 1em;
     width: calc(100% - 0.5em);
     font-size: 1em;
     height: 5em;
