--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,14 +4,14 @@
 
 <script>
     $(function() {
-      $('input[name="daterange"]').daterangepicker({
+        $('input[name="daterange"]').daterangepicker({
         opens: 'center',
         autoApply: true
-      }, function(start, end, label) {
-        console.log("A new date selection was made: " + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD'));
-      });
+        }, function(start, end, label) {
+            // Some action here
+        });
     });
-    </script>
+</script>
 
 <div id="home-main-div" class="container-fluid">
     <!-- <a href="{{ url_for('auth_page') }}">Login or Register</a>
