--- a/app/templates/roomList.html
+++ b/app/templates/roomList.html
@@ -1,6 +1,16 @@
 {% extends 'base.html' %}
 
 {% block body %}
+<script>
+    $(function() {
+        $('input[name="daterange"]').daterangepicker({
+        opens: 'center',
+        autoApply: true
+        }, function(start, end, label) {
+            // Some action here
+        });
+    });
+</script>
 {% from "_formhelpers.html" import render_field %}
 {% if current_user.is_authenticated %}
   Hi {{ current_user.name }}!
@@ -8,23 +18,30 @@
 {% endif %}
 
 <div id="home-main-div" class="container-fluid">
-  <!-- <a href="{{ url_for('auth_page') }}">Login or Register</a>
+    <!-- <a href="{{ url_for('auth_page') }}">Login or Register</a>
     <a href="{{ url_for('room_list_page') }}">View Rooms</a> -->
-  <div class="calendar-container">
-    <form method="POST" action="{{ url_for('room_list_page') }}" id="room-search-form">
-      <div class="room-search-param-container">
-        <div id="calendar">
-            {{ form.check_in_date() }}
-            {{ form.check_out_date() }}
-        </div>
-      </div>
-      <div class="room-search-param-container">
-        {{ form.number_of_occupants(class_="room-search-params") }}
-        {{ form.room_type(class_="room-search-params") }}
-        <button type="submit" value="Submit" class="room-search-params">Submit</button>
-      </div>
-    </form>
-  </div> 
+    <h1 id="hotel-callisto-title">Hotel Callisto</h1>
+    <div class="calendar-container">
+        <form id="room-search-form">
+            <div class="room-search-param-container">
+                    <input type="text" name="daterange" value="01/01/2018 - 01/15/2018" class="room-search-params"/>
+                    <select name="roomtype" class="room-search-params" placeholder="Guests">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                    </select>
+                    <select name="roomtype" class="room-search-params">
+                            <option value="regular">Regular</option>
+                            <option value="executive">Executive</option>
+                            <option value="president">President</option>
+                    </select>
+                    <button type="submit" class="room-search-params">Submit</button>
+            </div>
+        </form>
+    </div>
 </div>
 
 {% for room in rooms %} 
