--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -22,12 +22,16 @@
 
 #room-search-form-container {
     display: flex;
-    flex-grow: 1;
+    flex-grow: 1.3;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 #hotel-callisto-title {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    justify-content: flex-end;
     margin: 1em;
     font-size: 4em;
     text-align: center;
