--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -5,25 +5,59 @@
 
 {% from "_formhelpers.html" import render_field %}
 
-<h1>Login and Registration Page</h1>
-<h2>Login</h2>
-
-<form method="POST" action="{{ url_for('auth_page') }}"/>
-    {{ login_form.csrf_token }}
-    {{ render_field(login_form.email) }}<br/>
-    {{ render_field(login_form.password) }} <br/>
-    {{ render_field(login_form.remember) }} <br/>
-    {{ login_form.login_submit }}
-</form>
-
-<h2>Registration</h2>
-
-<form method="POST" action="{{ url_for('auth_page') }}"/>
-    {{ register_form.csrf_token }}
-    {{ render_field(register_form.email) }} <br/>
-    {{ render_field(register_form.password) }} <br/>
-    {{ render_field(register_form.confirm) }} <br/>
-    {{ register_form.register_submit }}
-</form>
+<div id="auth-main-div" class="flex-viewport-div">
+    <div id="login-signup-switch-container">
+        <div class="accordion" id="login-signup-switch">
+            <div class="card">
+                <div data-toggle="collapse" data-target="#login-collapse" aria-expanded="true" aria-controls="login-collapse" class="accordion-card-label-div">
+                    Login
+                </div>
+                <div id="login-collapse" class="collapse" aria-labelledby="headingOne" data-parent="#login-signup-switch">
+                    <div class="card-body">
+                        <form method="POST" action="{{ url_for('auth_page') }}" class="login-signup-form">
+                            <input type="text" class="login-form-input login-form-input-invalid" placeholder="Email"/>
+                            <input type="text" class="login-form-input" placeholder="Password"/>
+                            <input type="button" class="login-form-input" value="Login"/>
+                        </form>
+                        <!-- <form method="POST" action="{{ url_for('auth_page') }}">
+                            {{ login_form.csrf_token }}
+                            {{ render_field(login_form.email) }}<br/>
+                            {{ render_field(login_form.password) }} <br/>
+                            {{ render_field(login_form.remember) }} <br/>
+                            {{ login_form.login_submit }}
+                        </form> -->
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div data-toggle="collapse" data-target="#signup-collapse" aria-expanded="false" aria-controls="signup-collapse" class="accordion-card-label-div">
+                    Signup
+                </div>
+                <div id="signup-collapse" class="collapse" aria-labelledby="headingTwo" data-parent="#login-signup-switch">
+                <div class="card-body">
+                        <form method="POST" action="{{ url_for('auth_page') }}" class="login-signup-form">
+                            <input type="text" class="login-form-input" placeholder="Email"/>
+                            <input type="text" class="login-form-input" placeholder="Password"/>
+                            <input type="text" class="login-form-input" placeholder="Repeat Password"/>
+                            <div style="padding-left: 1.75em; font-size: 0.75em;">
+                                <p>At least 6 characters</p>
+                                <p>At least 1 special character</p>
+                                <p>At least 1 number</p>
+                            </div>
+                            <input type="button" class="login-form-input" value="Signup"/>
+                        </form>
+                    <!-- <form method="POST" action="{{ url_for('auth_page') }}">
+                        {{ register_form.csrf_token }}
+                        {{ render_field(register_form.email) }} <br/>
+                        {{ render_field(register_form.password) }} <br/>
+                        {{ render_field(register_form.confirm) }} <br/>
+                        {{ register_form.register_submit }}
+                    </form> -->
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
