--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,7 @@
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
     <title>Document</title>
     {% block statics %} 
 
