--- a/app/templates/roomList.html
+++ b/app/templates/roomList.html
@@ -52,12 +52,65 @@
         </div>
         </div>
     </div>
-</div>
+    <div id="room-search-results-main">
 
-{% for room in rooms %} 
-<p>
-    {{room.id}}
-</p>
-{% endfor %}
+        <div class="room-search-card">
+            <div class="image-div">
+                <img src="../static/images/rooms/regular/1.jpg">
+            </div>
+            <div class="search-item-brief-details">
+                <h1>2 beds, 1 bath</h1>
+                <h4>Regular</h4>
+                <ul>
+                    <li>Wifi</li>
+                    <li>Toiletries</li>
+                    <li>Air conditioning</li>
+                </ul>
+                <h4 class="price">200 USD<span style="font-size: 0.5em;">/night</span></h4>
+            </div>
+            <form class="book-button-div">
+                <input type="button" value="Book"/>
+            </form>
+        </div>
+        
+        <div class="room-search-card">
+            <div class="image-div">
+                <img src="../static/images/rooms/regular/1.jpg">
+            </div>
+            <div class="search-item-brief-details">
+                <h1>2 beds, 1 bath</h1>
+                <h4>Regular</h4>
+                <ul>
+                    <li>Wifi</li>
+                    <li>Toiletries</li>
+                    <li>Air conditioning</li>
+                </ul>
+                <h4 class="price">200 USD<span style="font-size: 0.5em;">/night</span></h4>
+            </div>
+            <form class="book-button-div">
+                <input type="button" value="Book"/>
+            </form>
+        </div>
+
+        <div class="room-search-card">
+            <div class="image-div">
+                <img src="../static/images/rooms/regular/1.jpg">
+            </div>
+            <div class="search-item-brief-details">
+                <h1>2 beds, 1 bath</h1>
+                <h4>Regular</h4>
+                <ul>
+                    <li>Wifi</li>
+                    <li>Toiletries</li>
+                    <li>Air conditioning</li>
+                </ul>
+                <h4 class="price">200 USD<span style="font-size: 0.5em;">/night</span></h4>
+            </div>
+            <form class="book-button-div">
+                <input type="button" value="Book"/>
+            </form>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
