--- a/app/templates/roomList.html
+++ b/app/templates/roomList.html
@@ -55,10 +55,10 @@
     <div id="room-search-results-main">
 
         <div class="room-search-card">
-            <div class="image-div">
+            <div class="image-div" onclick="location.href='/rooms/1';">
                 <img src="../static/images/rooms/regular/1.jpg">
             </div>
-            <div class="search-item-brief-details">
+            <div class="search-item-brief-details" onclick="location.href='/rooms/1';">
                 <h1>2 beds, 1 bath</h1>
                 <h4>Regular</h4>
                 <ul>
@@ -68,16 +68,16 @@
                 </ul>
                 <h4 class="price">200 USD<span style="font-size: 0.5em;">/night</span></h4>
             </div>
-            <form class="book-button-div">
-                <input type="button" value="Book"/>
-            </form>
+            <div class="book-button-div">
+                <a href="/rooms/1/book">Book</a>
+            </div>
         </div>
         
         <div class="room-search-card">
-            <div class="image-div">
+            <div class="image-div" onclick="location.href='/rooms/1';">
                 <img src="../static/images/rooms/regular/1.jpg">
             </div>
-            <div class="search-item-brief-details">
+            <div class="search-item-brief-details" onclick="location.href='/rooms/1';">
                 <h1>2 beds, 1 bath</h1>
                 <h4>Regular</h4>
                 <ul>
@@ -87,16 +87,16 @@
                 </ul>
                 <h4 class="price">200 USD<span style="font-size: 0.5em;">/night</span></h4>
             </div>
-            <form class="book-button-div">
-                <input type="button" value="Book"/>
-            </form>
+            <div class="book-button-div">
+                <a href="/rooms/1/book">Book</a>
+            </div>
         </div>
 
         <div class="room-search-card">
-            <div class="image-div">
+            <div class="image-div" onclick="location.href='/rooms/1';">
                 <img src="../static/images/rooms/regular/1.jpg">
             </div>
-            <div class="search-item-brief-details">
+            <div class="search-item-brief-details" onclick="location.href='/rooms/1';">
                 <h1>2 beds, 1 bath</h1>
                 <h4>Regular</h4>
                 <ul>
@@ -106,9 +106,9 @@
                 </ul>
                 <h4 class="price">200 USD<span style="font-size: 0.5em;">/night</span></h4>
             </div>
-            <form class="book-button-div">
-                <input type="button" value="Book"/>
-            </form>
+            <div class="book-button-div">
+                <a href="/rooms/1/book">Book</a>
+            </div>
         </div>
     </div>
 </div>
