--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/roomList.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/roomDetail.css') }}">
     <title>Document</title>
     {% block statics %} 
 
