--- a/app/templates/roomDetail.html
+++ b/app/templates/roomDetail.html
@@ -1,5 +1,51 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<h1>Room Detail Page</h1>
+<div id="room-detail-main-div" class="flex-viewport-div">
+    <div id="carousel-div">
+        <div id="carousel-inner-div">
+            <div id="room-image-carousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="../static/images/rooms/regular/1.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="../static/images/rooms/regular/2.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="../static/images/rooms/regular/3.jpg" alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#room-image-carousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#room-image-carousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div id="detail-div">
+        <div class="details">
+            <h1>Regular Room</h1>
+            <h4>2 beds, 1 bath</h4>
+            <p>In at lorem quam. Curabitur in massa tristique, laoreet quam in, mattis neque. Donec sagittis gravida ipsum sit amet consequat. Vivamus a efficitur sapien. Vestibulum in ultrices lorem. Integer ultricies ipsum et risus efficitur, vitae posuere nibh mollis. Vestibulum cursus elementum augue, a bibendum tellus eleifend a. Praesent viverra tortor sit amet varius ornare. Vivamus maximus neque id enim suscipit vestibulum.</p>
+        </div>
+        <ul class="amenities">
+            <li>Free Wireless Internet</li>
+            <li>Free Parking</li>
+            <li>Complimentary Toiletries</li>
+            <li>Luxury Bedding</li>
+            <li>Cable TV</li>
+            <li>Indoor Swimming Pool</li>
+            <li>Room Service</li>
+            <li>Free Early Check-in</li>
+            <li>Air Conditioning</li>
+            <li>Hot Tub</li>
+        </ul>
+        <a href="/rooms/1/book" class="detail-book-button">Book</a>
+    </div>
+</div>
 {% endblock %}
