Implement UI for booking information.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/roomList.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/roomDetail.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reserve.css') }}">
     <title>Document</title>
     {% block statics %} 
 
