--- a/app/templates/roomDetail.html
+++ b/app/templates/roomDetail.html
@@ -29,7 +29,7 @@
     </div>
     <div id="detail-div">
         <div class="details">
-            <h1>Regular Room</h1>
+            <h1>Regular Room, $200<span style="font-size:0.5em;">/night</span></h1>
             <h4>2 beds, 1 bath</h4>
             <p>In at lorem quam. Curabitur in massa tristique, laoreet quam in, mattis neque. Donec sagittis gravida ipsum sit amet consequat. Vivamus a efficitur sapien. Vestibulum in ultrices lorem. Integer ultricies ipsum et risus efficitur, vitae posuere nibh mollis. Vestibulum cursus elementum augue, a bibendum tellus eleifend a. Praesent viverra tortor sit amet varius ornare. Vivamus maximus neque id enim suscipit vestibulum.</p>
         </div>
