--- a/app/templates/roomList.html
+++ b/app/templates/roomList.html
@@ -46,7 +46,7 @@
                             <option value="executive">Executive</option>
                             <option value="president">President</option>
                         </select>
-                        <button type="submit" class="room-search-params">Submit</button>
+                        <button type="submit" class="room-search-params" id="room-search-param-submit">Submit</button>
                 </div>
             </form>
         </div>
