--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -13,9 +13,12 @@ body {
 #home-viewport1 {
     display: flex;
     flex-direction: column;
-    background-image: url(../images/glassbuilding.jpg);
+    background: url(../images/glassbuilding.jpg) no-repeat center center;
     background-position: center;
-    background-size: contain;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 #account-button {
