--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,6 +32,14 @@
 </head>
 
 <body>
+    <div id="account-button" class="btn-group dropleft">
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            O
+        </button>
+        <div class="dropdown-menu">
+            <a class="dropdown-item" href="{{ url_for('auth_page') }}">Login or Register</a>
+        </div>
+    </div>
     
     {% block body %}
     {% endblock %}
