login and register redone

--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -1,8 +1,15 @@
 {% extends 'base.html' %}
 
+{% block statics %}
+{{ super() }}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
+{% endblock %}
+
 {% block body %}
 
-{% from "_formhelpers.html" import render_field, render_error %}
+{% from "_formhelpers.html" import render_error %}
+
+
 
 <div id="auth-main-div" class="flex-viewport-div">
     <div id="login-signup-switch-container">
@@ -11,12 +18,14 @@
                 <div data-toggle="collapse" data-target="#login-collapse" aria-expanded="true" aria-controls="login-collapse" class="accordion-card-label-div">
                     Login
                 </div>
-                <div id="login-collapse" class="collapse" aria-labelledby="headingOne" data-parent="#login-signup-switch">
+                <div id="login-collapse" class="{{login_collapse}}" aria-labelledby="headingOne" data-parent="#login-signup-switch">
                     <div class="card-body">
-                        <form method="POST" action="{{ url_for('auth_page') }}" class="login-signup-form">
-                            <input type="text" class="login-form-input login-form-input-invalid" placeholder="Email"/>
-                            <input type="text" class="login-form-input" placeholder="Password"/>
-                            <input type="button" class="login-form-input" value="Login"/>
+                        <form method="POST" action="{{ url_for('login') }}" class="login-signup-form">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                            <input type="email" name="email" class="login-form-input login-form-input-invalid" placeholder="Email"/>
+                            <input type="password" name="password" class="login-form-input" placeholder="Password"/>
+                            {{ render_error('login_password') }}
+                            <input type="submit" class="login-form-input" value="Login"/>
                         </form>
                     </div>
                 </div>
@@ -25,18 +34,16 @@
                 <div data-toggle="collapse" data-target="#signup-collapse" aria-expanded="false" aria-controls="signup-collapse" class="accordion-card-label-div">
                     Signup
                 </div>
-                <div id="signup-collapse" class="collapse" aria-labelledby="headingTwo" data-parent="#login-signup-switch">
+                <div id="signup-collapse" class="{{register_collapse}}" aria-labelledby="headingTwo" data-parent="#login-signup-switch">
                 <div class="card-body">
-                        <form method="POST" action="{{ url_for('auth_page') }}" class="login-signup-form">
-                            <input type="text" class="login-form-input" placeholder="Email"/>
-                            <input type="text" class="login-form-input" placeholder="Password"/>
-                            <input type="text" class="login-form-input" placeholder="Repeat Password"/>
-                            <div style="padding-left: 1.75em; font-size: 0.75em;">
-                                <p>At least 6 characters</p>
-                                <p>At least 1 special character</p>
-                                <p>At least 1 number</p>
-                            </div>
-                            <input type="button" class="login-form-input" value="Signup"/>
+                        <form method="POST" action="{{ url_for('register') }}" class="login-signup-form">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                            <input type="email" name="email" class="login-form-input" placeholder="Email"/>
+                            {{ render_error('register_email') }}
+                            <input type="password" name="password" class="login-form-input" placeholder="Password"/>
+                            {{ render_error('register_password') }}
+                            <input type="password" name="confirm" class="login-form-input" placeholder="Repeat Password"/>
+                            <input type="submit" class="login-form-input" value="Signup"/>
                         </form>
                 </div>
                 </div>
