--- a/app/templates/reserve.html
+++ b/app/templates/reserve.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block statics %}
+{{ super() }}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/reserve-detail-div.css') }}">
+{% endblock %}
+
 {% block body %}
 {% from "_formhelpers.html" import render_field %}
 
