--- a/app/templates/reserve.html
+++ b/app/templates/reserve.html
@@ -2,7 +2,7 @@
 
 {% block statics %}
 {{ super() }}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/reserve-detail-div.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/reserve.css') }}">
 {% endblock %}
 
 {% block body %}
@@ -11,8 +11,8 @@
 <div id="reserve-main-div" class="flex-viewport-div">
     <div id="reserve-detail-div">
         <div class="details">
-            <h1>Regular Room</h1>
-            <h4>2 beds, 1 bath</h4>
+            <h1>{{ room.room_type }}</h1>
+            <h4>{{ room.accomodations }}</h4>
         </div>
         <ul class="amenities">
             <li>Free Wireless Internet</li>
@@ -30,19 +30,19 @@
             <h4>Booking Summary</h4>
             <div class="booking-info-item">
                 <p>Room#</p>
-                <p>308</p>
+                <p>{{room.id}}</p>
             </div>
             <div class="booking-info-item">
                 <p>Floor</p>
                 <p>3</p>
             </div>
             <div class="booking-info-item">
-                <p>Parking Spot</p>
-                <p>B 10</p>
+                <p>Number of people</p>
+                <p>{{num_occupants}}</p>
             </div>
             <div class="booking-info-item">
                 <p>Dates</p>
-                <p>09/30/2019 - 10/01/2019</p>
+                <p>{{check_in_date}} - {{check_out_date}}</p>
             </div>
         </div>
 
@@ -50,23 +50,30 @@
             <h4>Cost Summary</h4>
             <div class="cost-info-item">
                 <p>Rate</p>
-                <p>200</p>
+                <p>{{room.price}}</p>
             </div>
             <div class="cost-info-item">
                 <p>Local Fee</p>
-                <p>$0.40</p>
+                <p>$0.00</p>
             </div>
             <div class="cost-info-item">
                 <p>Estimated government taxes and fees</p>
-                <p>$40</p>
+                <p>$0</p>
             </div>
             <hr/>
             <div class="cost-info-item">
                 <h4>Total</h4>
-                <h4>$240.40</h4>
+                <h4>${{room.price}}</h4>
             </div>
         </div>
-        <a href="" class="reserve-book-button">Book</a>
+        <form action="{{ url_for( 'reserve_room_page', id=room.id ) }}" method="POST">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+            <input type="hidden" name="check_in_date" value="{{check_in_date}}" />
+            <input type="hidden" name="check_out_date" value="{{check_out_date}}" />
+            <input type="hidden" name="check_out_date" value="{{check_out_date}}" />
+            <input type="hidden" name="num_occupants" value="{{num_occupants}}" />
+            <input type="submit" class="reserve-book-button" />
+        </form>
     </div>
 </div>
 
