Changed menu button

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
     <div id="account-button" class="btn-group dropleft">
         <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
-            O
+            Menu
         </button>
         <div class="dropdown-menu">
             {% block dropdown %}
