--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,6 +39,7 @@
             {% block dropdown %}
             {% if current_user.is_authenticated %}
             <a class="dropdown-item" href="{{ url_for('logout') }}">Log out</a>
+            <a class="dropdown-item" href="{{ url_for('profile') }}">My profile</a>
             {% else %}
             <a class="dropdown-item" href="{{ url_for('auth_page') }}">Login or Register</a>
             {% endif %}
